- Fixed more spacing | - Added Gallery nav

--- a/mercury/mercury.css
+++ b/mercury/mercury.css
@@ -195,11 +195,11 @@ nav {
 #explore-title {
   color: #fbb00e;
 
-  font-size: 40px;
+  font-size: 24px;
   font-weight: bold;
 
   text-align: center;
-  margin: auto;
+  margin: 100px auto 0px auto;
 }
 
 a {
@@ -392,10 +392,6 @@ a {
   font-size: x-large;
 }
 
-/* .facts-section{
-
-} */
-
 #facts-title {
   color: #fbb00e;
   /* font-size: xx-large; */
@@ -414,6 +410,7 @@ a {
   margin: 20px auto 20px auto;
   justify-content: center;
 }
+
 .fact-1 {
   margin: 0 20px 20px 0;
 }
@@ -494,14 +491,18 @@ a {
 
 .gallery-title {
   color: #fbb00e;
-  padding: 250px 0px 50px 0px;
+  font-size: 48px;
+  font-weight: bold;
   text-align: center;
+  margin: 300px auto 0px auto;
+  padding-bottom: 50px;
 }
 
 .gallery-text {
   margin-left: 30px;
   padding: 100px 20px 0px 20px;
   color: white;
+  font-size: 20px;
 }
 
 .mercuryGallery {
